More stylish index page added

--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
-Hello Planet
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Fabiana Castiblanco</title>
+	</head>
+	<body>
+		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/about">About</a></li>
+        		<li><a href="/cv">CV</a></li>
+        		<li><a href="/blog">Blog</a></li>
+    		</ul>
+		</nav>
+		<div class="container">
+    		<div class="blurb">
+        		<h1></h1>
+				<p>I am a Data Scientist passionate about uncovering insights from data in diverse scenarios.
+           I began a career in Data Science after completing my studies in Mathematics. I am absolutely convinced that technology can help to shape strategies for improving our world and data is the main ingredient for such transformation.
+           My interests lie in Machine Learning methods and its potential applications to give insights towards a more sustainable planet. Also, I have interest in data visualization tools.. <a href="/about">Read more about my life...</a></p>
+    		</div><!-- /.blurb -->
+		</div><!-- /.container -->
+		<footer>
+    		<ul>
+        		<li><a href="mailto:fabi.cast@protonmail.com">email</a></li>
+        		<li><a href="https://github.com/fabi-cast">github.com/fabi-cast</a></li>
+			</ul>
+		</footer>
+	</body>
+</html>
