Adding hero image

--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
+ 
+
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Fabiana Castiblanco, Data Analyst</title>
+		<div class="hero-image">
+  		<div class="hero-text">
+    			<h1>Fabiana Castiblanco</h1>
+    			<p>Data Analyst</p>
+		  </div>
+		  </div> 
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
