change .css link

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		  </div>
 		  </div> 
 		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		<link rel="stylesheet" type="text/css" href="/css/hero.css">
 	</head>
 	<body>
 		<nav>
@@ -23,7 +23,6 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Fabiana Castiblanco</h1>
 				<p>I am a Data Scientist passionate about uncovering insights from data in diverse scenarios.  
 			           I am absolutely convinced that technology can help to shape strategies for improving our world and data is the main ingredient for such transformation.
 					<a href="/about">Know more about me</a></p>
