--- a/about/index.html
+++ b/about/index.html
@@ -4,21 +4,8 @@ title: About me
 ---
 
 		<div class="about">
-			<h1>My journey</h1>
-			<p> Background
-
-       I started my studies in Mathematics at the National University of Colombia in Bogotá, my hometown.  I chose this career because math is the language of science and is capable of giving explanations for almost every problem with unquestionable rigour. I always enjoy to understand every single detail in an argument. My primary focus was Analysis and Statistics. 
-      Driven by my keen curiosity, in order to create bizarre objects in math, I got interested in Set Theoretical Topology, a topic in which I went deep during my Master studies in the University of São Paulo (USP) - Brazil. There, I had the support of the recognized Research Agency FAPESP which granted me with a Master Fellowship. 
-Finally, I had the opportunity of joining the group of Prof. Ralf Schindler at the University of Münster, Germany as a Ph.D. student. I went further in abstraction and focused on forcing techniques and certain applications in Inner Model Theory, a branch of Set Theory, which allows to classify many levels of the Infinite and see which fundamental properties can and cannot exist in each level. With the power of Forcing, I constructed a model -or mathematical scenario- such that many of these bizzare objects exist. The particularity of this scenario was that we don't have the dominant assumption of the Axiom of Choice: absolutely bizarre!
-During my studies, I met people from all over the world and I had the opportunity of presenting the results of my research in many cities: Barcelona, Bogotá, Hamburg, Kyoto, Münster, Prague, Salvador (Brazil), São Paulo, Vienna. I enjoy communicate results, it is nice to share knowledge and receive feedback from the community.
-
-Conection with Earth
-        
-My journey was so enjoyable in Academia, but at some point I needed to see the impact of my work in society. I was missing interaction with other knowledge areas. In my opinion, the most interdisciplinary an environment is, the most fruitful for personal development is. 
-Can I contribute to solve some relevant issue in society?  Yes, but it is necessary to take another path. My love for coding and math was the catalyst to begin my journey in Data Science. In my Bachelor, I coded in C++ creating functions dedicated to solve mathematical problems so it was smooth  to learn Python and I was fascinated by its versatility, power and clarity!  
-Then, I had the amazing opportunity of joining a Data Analytics Bootcamp in Ironhack-Berlin. More than 400 hours of coding in less than 3 months, going through the ETL process entirely, taking raw data and deriving from it meaningful insights. Also, feeling the power of cross-functional team work with amazing people was one of the most valuable things in my life. Most of my projects are devoted to climate change topics, given my extreme concern about the current environmental situation and my love for nature.
-I have the conviction that all of us must respect our planet and appreciate the wonderful and unique things that Earth offer to us. Life is most important than money and goverments should hear our voice. Our Planet needs urgently our help and our actions in order to save it. We can do it!
-      </p>
+			<h1>About</h1>
+			
 
 			<ul class="contacts">
 				<li><a href="#">Your Departmental Webpage</a></li>
