--- a/index.html
+++ b/index.html
@@ -53,7 +53,17 @@ body, html {
   </div>
 </div>
 
+<div class="container">
 <p>I am a Data Scientist passionate about uncovering insights from data in diverse scenarios.  I began a career in Data Science after completing my studies in Mathematics. I am absolutely convinced that technology can help to shape strategies for improving our world and data is the main ingredient for such transformation.
 My interests lie in Machine Learning methods and its potential applications to give insights towards a more sustainable planet. Also, I have interest in data visualization tools.</p>
+</div>
+  
+  <footer>
+   <ul>
+   <li><a href="mailto:fabi.cast@protonmail.com">E-mail</a></li>
+   <li><a href="https://github.com/fabi-cast">github.com/fabi-cast</a></li>
+   </ul>
+  </footer>
+
 
 </body>
