--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <style>
 body, html {
   height: 100%;
-  margin: 0;
+  margin: 60px auto; 
+  width: 70%;
   font-family: Arial, Helvetica, sans-serif;
 }
 
