--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
 <style>
 body, html {
   height: 100%;
-  margin: 60px auto; 
-  width: 70%;
+  margin:0px;
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.article {
+  padding: 20px;
+  width: 95%;
+  background-color: #f1f1f1;
 }
 
 .hero-image {
@@ -54,11 +59,12 @@ body, html {
   </div>
 </div>
 
-<div class="container">
-<p>I am a Data Scientist passionate about uncovering insights from data in diverse scenarios.  I began a career in Data Science after completing my studies in Mathematics. I am absolutely convinced that technology can help to shape strategies for improving our world and data is the main ingredient for such transformation.
-My interests lie in Machine Learning methods and its potential applications to give insights towards a more sustainable planet. Also, I have interest in data visualization tools.</p>
+<div class="article">
+<p>I am a Data Analyst absolutely convinced that technology can help to shape strategies for improving our world and data is the main ingredient for such transformation.
+Having a background in Mathematics, my main interests lie in Machine Learning methods and its potential applications to give insights towards a more sustainable planet.
+Also, I enjoy to explore diverse data visualization tools, towards to uncover insights from data in diverse scenarios.</p>
 </div>
-  
+
   <footer>
    <ul>
    <li><a href="mailto:fabi.cast@protonmail.com">E-mail</a></li>
