--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@ body, html {
 }
 
 .article {
-  padding: 20px;
   width: 95%;
-  background-color: #f1f1f1;
+  color: white;
+  background-color: #2A2C2C;
 }
 
 .hero-image {
