--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@ body, html {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+footer {
+    font-size: .8em;
+    background-color: #2A2C2C;
+    color: white;
+}
+
 .article {
   width: 95%;
   color: white;
@@ -61,8 +67,8 @@ body, html {
 
 <div class="article">
 <p>I am a Data Analyst absolutely convinced that technology can help to shape strategies for improving our world and data is the main ingredient for such transformation.
-Having a background in Mathematics, my main interests lie in Machine Learning methods and its potential applications to give insights towards a more sustainable planet.
-Also, I enjoy to explore diverse data visualization tools, towards to uncover insights from data in diverse scenarios.</p>
+Having a background in Mathematics, my main interest lies in Machine Learning methods and its potential applications to give insights towards a more sustainable planet.
+Also, I enjoy to explore and experiment with diverse data visualization tools making the most for creating appealing presentations.</p>
 </div>
 
   <footer>
