--- a/index.html
+++ b/index.html
@@ -9,16 +9,13 @@ body, html {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-footer {
-    font-size: .8em;
-    background-color: #2A2C2C;
-    color: white;
+a {
+    text-decoration: none;
+    color: #999;
 }
 
 .article {
   width: 95%;
-  color: white;
-  background-color: #2A2C2C;
 }
 
 .hero-image {
