--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@ a {
     color: #999;
 }
 
+p {
+    font-size: 1.5em;
+    line-height: 1.4em;
+    color: #333;
+}
+
 .article {float: left;
   padding: 20px;
   width: 95%;
