--- a/index.html
+++ b/index.html
@@ -19,6 +19,17 @@ p {
     line-height: 1.4em;
 }
 
+nav ul, footer ul {
+    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    padding: 0px;
+    list-style: none;
+    font-weight: bold;
+}
+nav ul li, footer ul li {
+    display: inline;
+    margin-right: 20px;
+}
+
 .article {float: left;
   padding: 20px;
   width: 95%;
@@ -62,6 +73,15 @@ p {
 <body>
 
 <div class="hero-image">
+<nav>
+    	<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/about">About</a></li>
+        		<li><a href="/cv">Resume</a></li>
+        		<li><a href="/blog">Projects</a></li>
+    	</ul>
+</nav>
+
   <div class="hero-text">
     <h1 style="font-size:50px">Fabiana Castiblanco</h1>
     <p>Data Analyst</p>
