--- a/index.html
+++ b/index.html
@@ -24,10 +24,18 @@ nav ul, footer ul {
     padding: 0px;
     list-style: none;
     font-weight: bold;
+    color: white;
 }
+
 nav ul li, footer ul li {
     display: inline;
     margin-right: 20px;
+    margin-left: 20px;
+}
+
+footer {
+    border-top: 1px solid #d5d5d5;
+    font-size: .8em;
 }
 
 .article {float: left;
