--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ footer {
 }
 
 .hero-image {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/background.JPG");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/DSCN5298.JPG");
   height: 50%;
   background-position: center;
   background-repeat: no-repeat;
@@ -98,7 +98,8 @@ footer {
 
 <div class="article">
 <p>I am a Data Analyst absolutely convinced that technology can help to shape strategies for improving our world and data is the main ingredient for such transformation.
-Having a background in Mathematics, my main interest lies in Machine Learning methods and its potential applications to give insights towards a more sustainable planet.
+Having a background in Mathematics, my main interest lies in Machine Learning methods and its potential applications to solve meaningful problems, to orient business decisions and to uncover human behaviour.
+	
 Also, I enjoy to explore and experiment with diverse data visualization tools making the most for creating appealing presentations.</p>
 </div>
 
